--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -31,6 +31,7 @@ $grey:         $_400;
 
 /*******Font*******/
 
+$title:        8em;
 $extra-large:  3.5em;
 $very-large:   3em;
 $large:        2em;
