--- a/src/style/transitions.scss
+++ b/src/style/transitions.scss
@@ -1,3 +1,3 @@
-@import './helpers/_variables';
-@import './helpers/_mixins';
+// @import './helpers/_variables';
+// @import './helpers/_mixins';
 // @import './helpers/_placeholders';
