--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .app {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 h1 {
@@ -62,10 +62,10 @@ h1 {
     margin: 0 auto;
     height: $app-height;
     padding: 0;
-    width: 100%;
+    width: 100.5%;
     max-width: $app-width;
     opacity: 0;
-    overflow: hidden;
+    // overflow: hidden;
     background-color: transparent;
     animation: appOpen $speed $easeOut;
     animation-delay: $speed + 775ms;
@@ -140,7 +140,11 @@ h1 {
 
 @media only screen and (max-width: 767px) {
   .sub-app {
-    height: 100%;
+    height: 100.25%;
+  }
+  .sub-app-outter {
+    display: none;
+    z-index: -1;
   }
   .section,
   .section.withtabs {
