--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -37,6 +37,8 @@
     .menu-circle {
       @include super-center();
       margin: 0;
+      max-width: $app-width;
+      max-height: $app-height;
       width: $circle-size;
       height: $circle-size;
       border-radius: $circle-size;
@@ -59,13 +61,14 @@
     }
 
     .menu-text {
+        display: none;
         position: absolute;
-        top: -30%;
-        left: 0;
+        top: 50%;
+        left: 50%;
         font-size: 1em;
         font-weight: 100;
         text-transform: uppercase;
-        transform: rotate(75deg);
+        transform: translate(-50%,-50%) rotate(75deg);
         transition: all $app-speed;
         transition-delay: 450ms;
         z-index: -1;
@@ -113,7 +116,7 @@
 
   .menu-text {
     opacity: 0;
-    transform: rotate(215deg);
+    transform: translate(-50%,-50%) rotate(215deg);
     transition: opacity 300ms, transform $app-speed;
   }
 }
@@ -138,12 +141,6 @@
     width: $circle-size;
     height: $circle-size;
     border-radius: $circle-size;
-    opacity: 1;
-  }
-  70% {
-    width: $app-width;
-    height: $app-height;
-    border-radius: 0;
     opacity: 1;
   }
   100% {
@@ -216,13 +213,12 @@
 @media only screen and (max-width: 960px) {
   .menu-item-container {
     .menu-circle {
-      $size: $circle-size - 3em;
-      width: $size;
-      height:: $size;
+      width: $circle-size-small;
+      height:: $circle-size-small;
     }
     .menu-text {
-      top: -73%;
-      left: -7.5em;
+      top: 60%;
+      left: 47%;
       font-size: 0.8em;
     }
   }
@@ -231,5 +227,49 @@
 @media only screen and (max-width: 767px) {
   .menu-item-container {
     width: 50%;
+
+    .menu-circle {
+      max-width: 100vw;
+      max-height: 100vh;
+    }
   }
 }
+  // @keyframes circle-expand-mobile {
+  //   0% {
+  //     width: $circle-size-small;
+  //     height: $circle-size-small;
+  //     border-radius: $circle-size;
+  //     opacity: 1;
+  //   }
+  //   100% {
+  //     width: 100vw;
+  //     height: 100vh;
+  //     border-radius: 0;
+  //     opacity: 1;
+  //   }
+  // }
+  //
+  // @keyframes circle-close-mobile {
+  //   0% {
+  //     width: 100vw;
+  //     height: 100vh;
+  //     border-radius: 0;
+  //     opacity: 1;
+  //   }
+  //
+  //   100% {
+  //     width: $circle-size-small;
+  //     height: $circle-size-small;
+  //     border-radius: $circle-size;
+  //     opacity: 1;
+  //   }
+  // }
+
+
+  // .menu-item-container.active {
+  //   .menu-circle {
+  //     animation: circle-open-mobile $app-speed $easeInOut;
+  //     animation-delay: $app-delay + 275ms;
+  //     animation-fill-mode: forwards;
+  //   }
+  // }
