--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -64,6 +64,7 @@ $app-delay: 450ms;
 $app-width:   52em;
 $app-height:  46em;
 $circle-size: 10em;
+$circle-size-small: $circle-size - 3em;
 
 
 /******* Components *******/
