--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -65,7 +65,6 @@ h1 {
     width: 100.5%;
     max-width: $app-width;
     opacity: 0;
-    // overflow: hidden;
     background-color: transparent;
     animation: appOpen $speed $easeOut;
     animation-delay: $speed + 775ms;
@@ -82,6 +81,8 @@ h1 {
     $speed: $app-speed + 400ms;
 
     @extend %full-position;
+    position: relative;
+    height: 100%;
     background-color: rgba($white, 0);
     filter: blur(0px);
     animation: unblur $speed $easeOut;
