--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -6,7 +6,9 @@
 /******* HOME MENU *******/
 
 .menu-container {
-    @extend %full-position;
+    $height: $title-container-height * 2;
+    position: relative;
+    height: calc(100vh - #{$height});
     margin: 0 auto 1px;
     max-width: 75em;
 }
@@ -21,7 +23,7 @@
     top: 50%;
     left: 50%;
     display: inline-block;
-    width: 25%;
+    width: 50%;
     height: 12em;
     will-change: transform;
     transition: $app-speed $easeInOut;
@@ -37,10 +39,10 @@
     .menu-circle {
       @include super-center();
       margin: 0;
-      max-width: $app-width;
-      max-height: $app-height;
-      width: $circle-size;
-      height: $circle-size;
+      max-width: 100vw;
+      max-height: 100vh;
+      width: $circle-size-small;
+      height: $circle-size-small;
       border-radius: $circle-size;
       background-color: $white;
       @include box-shadow(1);
@@ -61,11 +63,10 @@
     }
 
     .menu-text {
-        display: none;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        font-size: 1em;
+        top: 60%;
+        left: 47%;
+        font-size: 0.8em;
         font-weight: 100;
         text-transform: uppercase;
         transform: translate(-50%,-50%) rotate(75deg);
@@ -210,66 +211,25 @@
 
 /******* MEDIA QUERIES *******/
 
-@media only screen and (max-width: 960px) {
-  .menu-item-container {
-    .menu-circle {
-      width: $circle-size-small;
-      height:: $circle-size-small;
-    }
-    .menu-text {
-      top: 60%;
-      left: 47%;
-      font-size: 0.8em;
-    }
+@media only screen and (min-width: 960px) {
+  .menu-circle {
+    width: $circle-size;
+    height: $circle-size;
+  }
+  .menu-text {
+    top: 50%;
+    left: 50%;
+    font-size: 1em;
   }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 767px) {
   .menu-item-container {
-    width: 50%;
+    width: 25%;
 
     .menu-circle {
-      max-width: 100vw;
-      max-height: 100vh;
+      max-width: $app-width;
+      max-height: $app-height;
     }
   }
 }
-  // @keyframes circle-expand-mobile {
-  //   0% {
-  //     width: $circle-size-small;
-  //     height: $circle-size-small;
-  //     border-radius: $circle-size;
-  //     opacity: 1;
-  //   }
-  //   100% {
-  //     width: 100vw;
-  //     height: 100vh;
-  //     border-radius: 0;
-  //     opacity: 1;
-  //   }
-  // }
-  //
-  // @keyframes circle-close-mobile {
-  //   0% {
-  //     width: 100vw;
-  //     height: 100vh;
-  //     border-radius: 0;
-  //     opacity: 1;
-  //   }
-  //
-  //   100% {
-  //     width: $circle-size-small;
-  //     height: $circle-size-small;
-  //     border-radius: $circle-size;
-  //     opacity: 1;
-  //   }
-  // }
-
-
-  // .menu-item-container.active {
-  //   .menu-circle {
-  //     animation: circle-open-mobile $app-speed $easeInOut;
-  //     animation-delay: $app-delay + 275ms;
-  //     animation-fill-mode: forwards;
-  //   }
-  // }
