--- a/src/style/components/title.scss
+++ b/src/style/components/title.scss
@@ -7,7 +7,7 @@
 
 .title-container {
   position: relative;
-  height: 8.5%;
+  height: $title-container-height;
   width: 100%;
   background-color: $black;
 }
@@ -17,7 +17,7 @@
   @extend %unselectable;
   right: 7%;
   margin: 0;
-  text-transform: uppercase;
+  text-transform: lowercase;
   font-size: $title;
   color: $white;
 
@@ -29,26 +29,12 @@
 
 /******* MEDIA QUERIES *******/
 
-@media only screen and (max-width: 767px) {
-  .title-container {
-    height: 5em;
-  }
+@media only screen and (min-width: 500px) {
   .title {
-    $font: $title - 4em;
+    $font: $title + 2em;
 
     @include super-center($left: 70%);
     right: inherit;
-    font-size: $font;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .title-container {
-    height: 4em;
-  }
-  .title {
-    $font: $title - 5em;
-
     font-size: $font;
   }
 }
