--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -7,13 +7,17 @@
 /*******GLOBALS*******/
 
 *, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 * {
-  font-family: $font;
+    font-family: $font;
+}
+
+html {
+    background-color: $black;
 }
 
 body,
@@ -26,10 +30,6 @@ html {
 body {
     background-color: $offwhite;
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'><g fill-rule='evenodd'><g id='hexagons' fill='%23e8e8e8' fill-opacity='0.4' fill-rule='nonzero'><path d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/></g></g></svg>");
-}
-
-.app {
-  // overflow: hidden;
 }
 
 h1 {
@@ -55,7 +55,7 @@ h1 {
 }
 
 .sub-app {
-    $speed: $app-speed - 100ms;
+    $speed: $app-speed;
 
     @include super-center;
     @include box-shadow(2);
@@ -67,7 +67,7 @@ h1 {
     opacity: 0;
     background-color: transparent;
     animation: appOpen $speed $easeOut;
-    animation-delay: $speed + 775ms;
+    animation-delay: $speed;
     animation-fill-mode: forwards;
     z-index: 10;
 }
@@ -78,7 +78,7 @@ h1 {
 }
 
 .home-container {
-    $speed: $app-speed + 400ms;
+    $speed: $app-speed;
 
     @extend %full-position;
     position: relative;
@@ -101,7 +101,6 @@ h1 {
     $speed: $app-speed + 400ms;
     will-change: filter;
     animation: blur $speed;
-    animation-delay: $app-speed;
     animation-fill-mode: forwards;
   }
 }
@@ -141,7 +140,15 @@ h1 {
 
 @media only screen and (max-width: 767px) {
   .sub-app {
-    height: 100.25%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    transform: translate(0,0);
+    margin: 0;
   }
   .sub-app-outter {
     display: none;
@@ -155,6 +162,9 @@ h1 {
     height: calc(50% - 22.5px + 3em);
   }
   .home-blur {
-    filter: none;
+    .menu-item-container:not(.active),
+    .title-container {
+      animation: none;
+    }
   }
 }
