--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
 
 /*******Material Color*******/
 
@@ -41,8 +42,9 @@ $title:        $large;
 $h1-size:      $extra-large;
 $p-size:       $small;
 
+$slabo:        'Slabo 27px', serif;
 $roboto:       'Roboto Condensed', sans-serif;
-$font:         $roboto;
+$font:         $slabo;
 
 
 /*******Animation*******/
