--- a/src/sub-apps/cold-drip-timer/style/tempo-slider.scss
+++ b/src/sub-apps/cold-drip-timer/style/tempo-slider.scss
@@ -1,6 +1,10 @@
 @import '../../../style/helpers/_variables';
 @import '../../../style/helpers/_mixins';
 
+.tempo-slider-section {
+  background-color: $offwhite;
+}
+
 .tempo-slider-div {
   @include super-center;
   width: 75%;
