small style adjustments

--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -8,7 +8,7 @@
 .menu-container {
     $height: $title-container-height * 2;
 
-    // position: relative;
+    margin: 0 auto;
     height: calc(100vh - #{$height});
     max-width: 75em;
     overflow: hidden;
