--- a/src/sub-apps/roast-development-calculator/style/top-section.scss
+++ b/src/sub-apps/roast-development-calculator/style/top-section.scss
@@ -1,9 +1,56 @@
+@import '../../../style/helpers/_variables';
+
 /******* TIME PICKER *******/
 
-.time-picker-pointer-root {
-  left: 49.3%;
+body div:nth-last-child(-n+2) > div > div > div > div > div > div {
+
+  /* numbers */
+  > div:nth-child(2) > div:nth-child(2) > span {
+    left: 43.5%;
+  }
+
+  /* picker line */
+  > div:nth-child(2) > div:nth-child(2) > div:first-child {
+    left: 49.3%;
+  }
+
+  /* minute/seconds numbers at top */
+  > div:first-child {
+    padding: 2em 0 !important;
+
+    > div {
+      transform: translateY(-16px);
+
+      * { transform: translateY(0); }
+    }
+
+    * { padding: 0 !important}
+  }
+
+  /* added minute/second text */
+  > div > div > div:nth-child(2) {
+    &:after {
+      content: '(minutes : seconds)';
+      font-size: 0.25em;
+      position: absolute;
+      bottom: -4em;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 10em;
+      text-align: center;
+      color: $grey;
+
+      *:after {
+          content: '';
+      }
+    }
+  }
 }
 
-.time-picker-number {
-  left: 43.5%;
-}
+
+
+
+
+// body div:nth-last-child(-n+2) > div > div > div > div > div > div > div > div > div:nth-child(2) span:nth-child(1):after {
+//
+// }
