more tweeking of animations on home screen

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -55,7 +55,7 @@ h1 {
 }
 
 .sub-app {
-    $speed: $app-speed;
+    $speed: $app-speed - 125ms;
 
     @include super-center;
     @include box-shadow(2);
