--- a/src/sub-apps/cold-drip-timer/style/sweet-spot-box.scss
+++ b/src/sub-apps/cold-drip-timer/style/sweet-spot-box.scss
@@ -25,8 +25,9 @@
 }
 
 @keyframes open-sweetspot {
-  from {transform: scale(0);}
-  to {transform: scale(1);}
+  0% { transform: scale(0); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
 }
 
 @keyframes close-sweetspot {
