--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -68,6 +68,18 @@ $circle-size-small: $circle-size - 3em;
 $title-container-height: 4em;
 
 
+/******* HOME GRID *******/
+
+$row-1: 7em;
+$row-2: 21em;
+$row-3: 35em;
+
+$column-1: 0%;
+$column-2: 100%;
+$column-3: 200%;
+$column-4: 300%;
+
+
 /******* Components *******/
 
 $primary:                 $white;
