--- a/src/style/components/footer.scss
+++ b/src/style/components/footer.scss
@@ -2,26 +2,18 @@
 @import '../helpers/_mixins';
 
 .footer-container {
-  height: auto;
+  position: relative;
+  height: 4em;
   width: 100%;
-  padding: 4em 0;
   background-color: $black;
 
-  .footer-list {
-    list-style: none;
-  }
-
-  li {
-    margin: 0.5em 0;
-  }
-
-  a {
-    color: $white;
-    text-decoration: none;
-
-    &:hover,
-    &:focus {
-      text-decoration: underline;
-    }
+  .version {
+    @include super-center($left: 3em, $x: 0%);
+    margin: 0;
+    text-transform: lowercase;
+    font-weight: 100;
+    top: 50%;
+    color: rgba($white, 0.5);
+    font-size: 1em;
   }
 }
