--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -6,11 +6,8 @@
 /******* HOME MENU *******/
 
 .menu-container {
-    $height: $title-container-height * 2;
-    @include super-center();
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
+    position: relative;
+    height: 46em;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -101,6 +98,10 @@
   &:nth-child(2) { transform: translate( $column-2 , $row-1 ); }
   &:nth-child(3) { transform: translate( $column-1 , $row-2 ); }
   &:nth-child(4) { transform: translate( $column-2 , $row-2 ); }
+
+  /*testing*/
+  &:nth-child(5) { transform: translate( $column-1 , $row-3 ); }
+  &:nth-child(6) { transform: translate( $column-2 , $row-3 ); }
 }
 
 @media only screen and (min-width: 767px) {
