--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
-
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
 
 /******* Greyscale *******/
 
