fixed opening animation being broken and closing of roast moi

--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -106,15 +106,16 @@
 
 @media only screen and (min-width: 767px) {
   .menu-item-container {
-    $offset: 6em;
-    &:nth-child(1) { transform: translate( $column-1 , $row-1 + $offset); }
-    &:nth-child(2) { transform: translate( $column-2 , $row-1 + $offset); }
-    &:nth-child(3) { transform: translate( $column-3 , $row-1 + $offset); }
-    &:nth-child(4) { transform: translate( $column-4 , $row-1 + $offset); }
+    $offset: 4em;
+
+    &:nth-child(1) { transform: translate( $column-1 , $row-1 + $offset ); }
+    &:nth-child(2) { transform: translate( $column-2 , $row-1 + $offset ); }
+    &:nth-child(3) { transform: translate( $column-3 , $row-1 + $offset ); }
+    &:nth-child(4) { transform: translate( $column-4 , $row-1 + $offset ); }
 
     /*testing*/
-    &:nth-child(5) { transform: translate( $column-1 , $row-2 + $offset); }
-    &:nth-child(6) { transform: translate( $column-2 , $row-2 + $offset); }
+    &:nth-child(5) { transform: translate( $column-1 , $row-2 + $offset ); }
+    &:nth-child(6) { transform: translate( $column-2 , $row-2 + $offset ); }
   }
 }
 
@@ -248,6 +249,7 @@
   .menu-container {
     width: $app-width;
     height: $app-height;
+    transform: translate(0,6%);
   }
   .menu-item-container {
     width: 25%;
