--- a/src/style/components/input-blocks.scss
+++ b/src/style/components/input-blocks.scss
@@ -112,7 +112,7 @@
     font-size: 1.1rem;
   }
   .block-value {
-    @include super-center(66%, 66%);
+    @include super-center(30%, 66%);
   }
   &:first-child {
     margin: 1em 1em 0.5em 1em;
@@ -146,6 +146,8 @@
     @include super-center();
     font-size: $medium;
     color: $result-text-color;
+    width: 100%;
+    text-align: center;
   }
 }
 
