--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -144,8 +144,8 @@ h1 {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100vh;
-    width: 100vw;
+    height: $app-height-mobile;
+    width: $app-width-mobile;
     transform: translate(0,0);
     margin: 0;
   }
