--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -56,8 +56,11 @@ $app-delay: 450ms;
 
 /******* Size *******/
 
+$ios-offset:                       44px;
 $app-width:                        52em;
 $app-height:                       46em;
+$app-width-mobile:                 100vw;
+$app-height-mobile:                calc(100vh - #{$ios-offset});
 $circle-size:                      10em;
 $circle-size-small:                $circle-size - 3em;
 $title-container-height:           4em;
@@ -93,3 +96,5 @@ $keypad-text-color:       $secondary;
 
 $action-btn-bg:           $primary;
 $action-btn-text:         $secondary;
+
+$footer-height:           $ios-offset;
