--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -70,6 +70,7 @@
         font-size: 0.8em;
         font-weight: 100;
         text-transform: uppercase;
+        -webkit-transform: translate(-50%,-50%) rotate(75deg);
         transform: translate(-50%,-50%) rotate(75deg);
         transition: all $app-speed;
         transition-delay: 240ms;
