--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+
 @import './helpers/_variables';
 @import './helpers/_mixins';
 @import './helpers/_placeholders';
