--- a/src/sub-apps/roast-development-calculator/style/top-section.scss
+++ b/src/sub-apps/roast-development-calculator/style/top-section.scss
@@ -2,7 +2,7 @@
 
 /******* TIME PICKER *******/
 
-body div:nth-last-child(-n+2) > div > div > div > div > div > div {
+body.roast-dev div:nth-last-child(-n+2) > div > div > div > div > div > div {
 
   /* numbers */
   > div:nth-child(2) > div:nth-child(2) > span {
