--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -54,10 +54,12 @@ $app-delay: 450ms;
 /******* Size *******/
 
 $ios-offset:                       44px;
+$app-bar-height:                   45px;
+$mobile-footer-offset:             $ios-offset / 2;
 $app-width:                        52em;
 $app-height:                       46em;
 $app-width-mobile:                 100vw;
-$app-height-mobile:                calc(100vh - #{$ios-offset});
+$app-height-mobile:                100vh;
 $circle-size:                      10em;
 $circle-size-small:                $circle-size - 3em;
 $title-container-height:           4em;
