--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -57,7 +57,7 @@ h1 {
 
 .sub-app {
     $speed: $app-speed - 125ms;
-    @include super-center($top: 53%);
+    @include super-center();
     @include box-shadow(2);
     margin: 0 auto;
     height: $app-height;
@@ -101,7 +101,8 @@ h1 {
   background-color: rgba($white, 0.05);
 
   .menu-item-container:not(.active),
-  .title-container {
+  .title-container,
+  .footer-container {
     $speed: $app-speed + 400ms;
     will-change: filter;
     animation: blur $speed;
@@ -126,13 +127,13 @@ h1 {
     filter: blur(0px);
   }
   100% {
-    filter: blur(15px);
+    filter: blur(12px);
   }
 }
 
 @keyframes unblur {
   0% {
-    filter: blur(15px);
+    filter: blur(12px);
   }
   100% {
     filter: blur(0px);
@@ -158,13 +159,6 @@ h1 {
     display: none;
     z-index: -1;
   }
-  // .section,
-  // .section.withtabs {
-  //   height: calc(50% - 22.5px);
-  // }
-  // .section.withcolorfade {
-  //   height: calc(50% - 22.5px + 3em);
-  // }
   .home-blur {
     .menu-item-container:not(.active),
     .title-container {
