--- a/src/style/components/input-blocks.scss
+++ b/src/style/components/input-blocks.scss
@@ -11,8 +11,10 @@
 }
 
 .block-container {
+  position: relative;
   background-color: $white;
   height: 100%;
+  z-index: 1;
 
     &:after {
       content: "";
@@ -29,6 +31,7 @@
   width: 100%;
   float: left;
   display: inline-block;
+  border-radius: $border-radius;
   width: calc(50% - 1.5em);
   height: calc(66.66% - 2em);
   background-color: $block-color;
@@ -78,13 +81,15 @@
     }
 
     &:after {
+      $size: 100%;
+      @include super-center($top: calc(50% + 0.5em));
       @include stripes-1;
       content: '';
-      position: absolute;
-      bottom: -10px;
       display: block;
-      width: 100%;
-      height: 10px;
+      width: calc(#{$size} - 2px);
+      height: $size;
+      border-radius: $border-radius;
+      z-index: -1;
     }
   }
 }
@@ -127,10 +132,7 @@
 }
 
 .section.stacked .block-result {
-  @include super-center($top: calc(50% - 0.5em));
   font-size: 2.33rem;
-  width: 10em;
-  text-align: center;
 }
 
 
@@ -141,13 +143,27 @@
   background-color: transparent;
   width: 100%;
   height: 33.33%;
+}
 
-  .block-result {
+.section .block-result-div {
+  > .inner-wrapper {
     @include super-center();
-    font-size: $medium;
-    color: $result-text-color;
-    width: 100%;
-    text-align: center;
+    > .block-result {
+      @include gradient-text($text-gradient);
+      position: relative;
+      font-size: $medium;
+      font-weight: bold;
+      text-align: center;
+      display: inline-block;
+      width: auto !important;
+      padding: 4px;
+      overflow: visible;
+      transform: none;
+      left: 50%;
+      margin: 0 auto;
+      top: auto;
+      transform: translate(-50%, 0%);
+    }
   }
 }
 
