--- a/src/style/helpers/_mixins.scss
+++ b/src/style/helpers/_mixins.scss
@@ -30,6 +30,41 @@
   transform: translate($x,$y);
 }
 
+@mixin gradient-text($gradient, $bg : 'light') {
+  @supports(mix-blend-mode: lighten) {
+    display: inline-block;
+    
+    &:before {
+      $size: calc(100% - 2px);
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0; right: 0; bottom: 0; left: 0;
+      background: unquote($gradient);
+      pointer-events: none;
+      transform: scale(0.95);
+    }
+
+    @if ($bg == 'light') {
+      color: #000;
+      background: #fff;
+      mix-blend-mode: multiply;
+
+      &::before {
+        mix-blend-mode: screen;
+      }
+    } @else {
+      color: #fff;
+      background: #000;
+      mix-blend-mode: lighten;
+
+      &:before {
+        mix-blend-mode: multiply;
+      }
+    }
+  }
+}
+
 
 /******* BACKGROUND TEXTURE *******/
 
